# sim

./: .gitignore  foo.prof  notes.md  pyproject.toml
assets/kenney_hexagon-pack/Spritesheets/: hexagonAll_sheet.xcf
assets/maps/: 4corners.tmj  hexagonAll_sheet.tsj  test.tiled-session
scripts/: exec_db
sim/: pyproject.toml
sim/app/: __main__.py  agent.py  config.py  hex_lib.py  hexagon.py  home.py  map.py  resources.py  tile.py  tilemap.py
sim/scripts/: cp_results  exec  exec_dev_container  test-local.sh  update-deps
sim/tests/: test_util.py
src/sim/: __init__.py  __main__.py  agent.py  config.py  hexagon.py  home.py  infobar.py  map.py  resources.py  tile.py  tilemap.py  time.py  util.py
tests/: test_hex.py  test_time.py  test_util.py
