[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim"
version = "0.0.1"
requires-python = ">=3.11"


dependencies = [
    "arcade==3.0.0.dev26",
    "faker",
    "extended-int",
]

[project.optional-dependencies]

dev = [
    "coverage",
    "pytest>=7.3",
    "pytest-sugar",
    "mypy>=1.0.0",
    "black",
    "ruff",
    "pytest-xdist",
    "python-dotenv",
    "pytest-cov",
    "hypothesis",
    "pudb",
    "snakeviz",
]

[tool.ruff]
ignore = [
    "DJ", # flake8-django
    "ANN", # flake8-annotations - leave these to mypy
    "PD", # pandas-vet - we don't use pandas
    "NPY", # NumPy-specific rules - we don't use numpy
    "AIR", # Airflow - we don't use apache airflow
    "S101", # Use of assert detected - I use assert for typing and testing
    "G004", # logging-f-string - I want to use fstrings for logs, I don't care about the consequences
    "COM812", # https://github.com/astral-sh/ruff/issues/6525

]
select = ["ALL"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.setuptools]
packages = ["app"]
